// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardBase /> snapshots renders CardBase for cities list 1`] = `
<CardCities
  highlightedOfferID="0"
  offer={
    Object {
      "bedrooms": 1,
      "city": Object {
        "location": Object {
          "latitude": 52.370216,
          "longitude": 4.895168,
          "zoom": 10,
        },
        "name": "Amsterdam",
      },
      "description": "Gran suite con entrada independiente y baño interior privado en el centro de Segovia. Privacidad y comodidad a tan sólo tres minutos del acueducto.Amplia y luminosa, con 2 camas de 105 (+ 1 opcional de 90), baño completo, calefacción, mininevera, microondas, vajilla, cubertería básica, Internet y un balcón grande y soleado.I speak English, Italian and Spanish",
      "goods": Array [
        "cabel TV",
        "heating",
        "kitchen",
        "towels",
        "washing machine",
        "washer",
        "dishwasher",
        "conditioner",
        "elevator",
        "coffee machine",
      ],
      "host": Object {
        "avatar": "https://robohash.org/28?set=set2&size=74x74",
        "id": 4,
        "isPro": false,
        "name": "Salom",
      },
      "id": 1,
      "images": Array [
        "https://bit.ly/34LWdhj",
        "https://bit.ly/36Ys6Wn",
        "https://bit.ly/33Qpecj",
        "https://bit.ly/30YVQif",
        "https://bit.ly/36TgIv7",
        "https://bit.ly/3lEt2DG",
      ],
      "isFavorite": true,
      "isPremium": false,
      "location": Array [
        48.83961,
        2.342499,
      ],
      "maxGuests": 8,
      "previewImage": "https://bit.ly/34LWdhj",
      "price": 207,
      "rating": 1.4018800815887484,
      "title": "La Latina- Small Charming Studio",
      "type": "room",
    }
  }
  resetActiveCardIdAction={[Function]}
  setActiveCardIdAction={[Function]}
  type="cities"
>
  <CardDetails
    highlightedOfferID="0"
    offer={
      Object {
        "bedrooms": 1,
        "city": Object {
          "location": Object {
            "latitude": 52.370216,
            "longitude": 4.895168,
            "zoom": 10,
          },
          "name": "Amsterdam",
        },
        "description": "Gran suite con entrada independiente y baño interior privado en el centro de Segovia. Privacidad y comodidad a tan sólo tres minutos del acueducto.Amplia y luminosa, con 2 camas de 105 (+ 1 opcional de 90), baño completo, calefacción, mininevera, microondas, vajilla, cubertería básica, Internet y un balcón grande y soleado.I speak English, Italian and Spanish",
        "goods": Array [
          "cabel TV",
          "heating",
          "kitchen",
          "towels",
          "washing machine",
          "washer",
          "dishwasher",
          "conditioner",
          "elevator",
          "coffee machine",
        ],
        "host": Object {
          "avatar": "https://robohash.org/28?set=set2&size=74x74",
          "id": 4,
          "isPro": false,
          "name": "Salom",
        },
        "id": 1,
        "images": Array [
          "https://bit.ly/34LWdhj",
          "https://bit.ly/36Ys6Wn",
          "https://bit.ly/33Qpecj",
          "https://bit.ly/30YVQif",
          "https://bit.ly/36TgIv7",
          "https://bit.ly/3lEt2DG",
        ],
        "isFavorite": true,
        "isPremium": false,
        "location": Array [
          48.83961,
          2.342499,
        ],
        "maxGuests": 8,
        "previewImage": "https://bit.ly/34LWdhj",
        "price": 207,
        "rating": 1.4018800815887484,
        "title": "La Latina- Small Charming Studio",
        "type": "room",
      }
    }
    resetActiveCardIdAction={[Function]}
    setActiveCardIdAction={[Function]}
    type="cities"
  />
</CardCities>
`;

exports[`<CardBase /> snapshots renders CardBase for favorites list 1`] = `
<article
  className="favorites__card place-card"
>
  <CardDetails
    offer={
      Object {
        "bedrooms": 1,
        "city": Object {
          "location": Object {
            "latitude": 52.370216,
            "longitude": 4.895168,
            "zoom": 10,
          },
          "name": "Amsterdam",
        },
        "description": "Gran suite con entrada independiente y baño interior privado en el centro de Segovia. Privacidad y comodidad a tan sólo tres minutos del acueducto.Amplia y luminosa, con 2 camas de 105 (+ 1 opcional de 90), baño completo, calefacción, mininevera, microondas, vajilla, cubertería básica, Internet y un balcón grande y soleado.I speak English, Italian and Spanish",
        "goods": Array [
          "cabel TV",
          "heating",
          "kitchen",
          "towels",
          "washing machine",
          "washer",
          "dishwasher",
          "conditioner",
          "elevator",
          "coffee machine",
        ],
        "host": Object {
          "avatar": "https://robohash.org/28?set=set2&size=74x74",
          "id": 4,
          "isPro": false,
          "name": "Salom",
        },
        "id": 1,
        "images": Array [
          "https://bit.ly/34LWdhj",
          "https://bit.ly/36Ys6Wn",
          "https://bit.ly/33Qpecj",
          "https://bit.ly/30YVQif",
          "https://bit.ly/36TgIv7",
          "https://bit.ly/3lEt2DG",
        ],
        "isFavorite": true,
        "isPremium": false,
        "location": Array [
          48.83961,
          2.342499,
        ],
        "maxGuests": 8,
        "previewImage": "https://bit.ly/34LWdhj",
        "price": 207,
        "rating": 1.4018800815887484,
        "title": "La Latina- Small Charming Studio",
        "type": "room",
      }
    }
    type="favorites"
  />
</article>
`;

exports[`<CardBase /> snapshots renders CardBase for near-places list 1`] = `
<article
  className="near-places__card place-card"
>
  <CardDetails
    offer={
      Object {
        "bedrooms": 1,
        "city": Object {
          "location": Object {
            "latitude": 52.370216,
            "longitude": 4.895168,
            "zoom": 10,
          },
          "name": "Amsterdam",
        },
        "description": "Gran suite con entrada independiente y baño interior privado en el centro de Segovia. Privacidad y comodidad a tan sólo tres minutos del acueducto.Amplia y luminosa, con 2 camas de 105 (+ 1 opcional de 90), baño completo, calefacción, mininevera, microondas, vajilla, cubertería básica, Internet y un balcón grande y soleado.I speak English, Italian and Spanish",
        "goods": Array [
          "cabel TV",
          "heating",
          "kitchen",
          "towels",
          "washing machine",
          "washer",
          "dishwasher",
          "conditioner",
          "elevator",
          "coffee machine",
        ],
        "host": Object {
          "avatar": "https://robohash.org/28?set=set2&size=74x74",
          "id": 4,
          "isPro": false,
          "name": "Salom",
        },
        "id": 1,
        "images": Array [
          "https://bit.ly/34LWdhj",
          "https://bit.ly/36Ys6Wn",
          "https://bit.ly/33Qpecj",
          "https://bit.ly/30YVQif",
          "https://bit.ly/36TgIv7",
          "https://bit.ly/3lEt2DG",
        ],
        "isFavorite": true,
        "isPremium": false,
        "location": Array [
          48.83961,
          2.342499,
        ],
        "maxGuests": 8,
        "previewImage": "https://bit.ly/34LWdhj",
        "price": 207,
        "rating": 1.4018800815887484,
        "title": "La Latina- Small Charming Studio",
        "type": "room",
      }
    }
    type="near-places"
  />
</article>
`;
